Linkeo de imágenes y agregado de clases para css

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <nav class="nav">
-        <img src="logo.png" href="index.html">
+        <img src="asserts\imagenes\logo.svg" href="index.html">
     <nav>
     <header class="header">
         <section>
-            <img src="" alt="">
+            <img src="asserts\imagenes\desktop\image-hero-left.png" alt="">
         </section>
         <section class="TextoHeader">
             <h1>Página Web</h1>
@@ -22,26 +22,29 @@
             </div>
         </section>
         <section>
-            <img src="" alt="">
+            <img src="asserts\imagenes\desktop\image-hero-right.png" alt="">
         </section>
     </Header>
     <main class="main">
-        <section>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        <section class="imagenesMain">
+            <img src="asserts\imagenes\desktop\image-woman-in-videocall.jpg" alt="">
+            <img src="asserts\imagenes\desktop\image-women-videochatting.jpg" alt="">
+            <img src="asserts\imagenes\desktop\image-men-in-meeting.jpg" alt="">
+            <img src="asserts\imagenes\desktop\image-man-texting.jpg" alt="">
         </section>
-        <section class="textoSection">
+        <section class="text">
             <h3>Título sección</h3>
             <H2>Titular</H2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi illo aliquam nisi enim repellendus molestias laboriosam consequuntur eaque ullam blanditiis animi, et quae. Quaerat aperiam voluptatem fugiat, veritatis corporis necessitatibus?</p>
         </section>
     </main>
     <footer>
-        <h2></h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ratione sequi minima nam culpa dolores itaque, tempora mollitia consectetur hic! Alias, eveniet eius ipsam officia ipsum error possimus neque eaque.</p>
-        <button>Descargar</button>
+        <img src="asserts\imagenes\desktop\image-footer.jpg" alt="">
+        <section class="sectionFooter">
+            <h2>Título de footer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ratione sequi minima nam culpa dolores itaque, tempora mollitia consectetur hic! Alias, eveniet eius ipsam officia ipsum error possimus neque eaque.</p>
+            <button>Descargar</button>
+        </section>
     </footer>
 </body>
 </html>
