--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="asserts\css\style.css">
     <title>Página Web</title>
 </head>
 <body>
-    <nav class="nav">
+    <nav>
         <img src="asserts\imagenes\logo.svg" href="index.html">
     <nav>
-    <header class="header">
+    <header>
         <section>
-            <img src="asserts\imagenes\desktop\image-hero-left.png" alt="">
+            <img  class="imagenHeader" src="asserts\imagenes\desktop\image-hero-left.png" alt="">
         </section>
         <section class="TextoHeader">
             <h1>Página Web</h1>
@@ -22,15 +23,15 @@
             </div>
         </section>
         <section>
-            <img src="asserts\imagenes\desktop\image-hero-right.png" alt="">
+            <img  class="imagenHeader" src="asserts\imagenes\desktop\image-hero-right.png" alt="">
         </section>
     </Header>
     <main class="main">
         <section class="imagenesMain">
-            <img src="asserts\imagenes\desktop\image-woman-in-videocall.jpg" alt="">
-            <img src="asserts\imagenes\desktop\image-women-videochatting.jpg" alt="">
-            <img src="asserts\imagenes\desktop\image-men-in-meeting.jpg" alt="">
-            <img src="asserts\imagenes\desktop\image-man-texting.jpg" alt="">
+            <img class="imagenMain" src="asserts\imagenes\desktop\image-woman-in-videocall.jpg" alt="">
+            <img class="imagenMain" src="asserts\imagenes\desktop\image-women-videochatting.jpg" alt="">
+            <img class="imagenMain" src="asserts\imagenes\desktop\image-men-in-meeting.jpg" alt="">
+            <img class="imagenMain" src="asserts\imagenes\desktop\image-man-texting.jpg" alt="">
         </section>
         <section class="text">
             <h3>Título sección</h3>
