--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 <body>
     <nav>
         <img src="asserts\imagenes\logo.svg" href="index.html">
-    <nav>
+    </nav>
     <header>
-        <section>
-            <img  class="imagenHeader" src="asserts\imagenes\desktop\image-hero-left.png" alt="">
+        <section class="imagenHeader-left">
+            <img src="asserts\imagenes\desktop\image-hero-left.png" alt="">
         </section>
-        <section class="TextoHeader">
-            <h1>Página Web</h1>
+        <section class="textoHeader">
+            <h1>Aplicación de comunicación</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nemo delectus tempora autem minus, mollitia sapiente quis cupiditate iusto libero iure veritatis, tenetur eligendi numquam consectetur est. Eaque, nemo consectetur!</p>
             <div class="botonesHeader">
-                <button>Descargar</button>
+                <button>Descargar VX.X</button>
                 <button>Qué es estooo??</button>
             </div>
         </section>
-        <section>
-            <img  class="imagenHeader" src="asserts\imagenes\desktop\image-hero-right.png" alt="">
+        <section  class="imagenHeader-right">
+            <img src="asserts\imagenes\desktop\image-hero-right.png" alt="">
         </section>
     </Header>
     <main class="main">
@@ -40,12 +40,9 @@
         </section>
     </main>
     <footer>
-        <img src="asserts\imagenes\desktop\image-footer.jpg" alt="">
-        <section class="sectionFooter">
-            <h2>Título de footer</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ratione sequi minima nam culpa dolores itaque, tempora mollitia consectetur hic! Alias, eveniet eius ipsam officia ipsum error possimus neque eaque.</p>
-            <button>Descargar</button>
-        </section>
+        <h2 class="sectionFooter">Título de footer</h2>
+        <p class="sectionFooter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ratione sequi minima nam culpa dolores itaque, tempora mollitia consectetur hic! Alias, eveniet eius ipsam officia ipsum error possimus neque eaque.</p>
+        <button class="sectionFooter">Descargar</button>
     </footer>
 </body>
 </html>
