mejoras de estilización versión desktop

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     <footer>
         <h2 class="sectionFooter">Título de footer</h2>
         <p class="sectionFooter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ratione sequi minima nam culpa dolores itaque, tempora mollitia consectetur hic! Alias, eveniet eius ipsam officia ipsum error possimus neque eaque.</p>
-        <button class="sectionFooter">Descargar</button>
+        <section class="buttonFooter">
+            <button>Descargar VX.X</button>
+        </section>
     </footer>
 </body>
 </html>
