mejorando estilización desktop v-2

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2 class="sectionFooter">Título de footer</h2>
         <p class="sectionFooter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ratione sequi minima nam culpa dolores itaque, tempora mollitia consectetur hic! Alias, eveniet eius ipsam officia ipsum error possimus neque eaque.</p>
         <section class="buttonFooter">
-            <button>Descargar VX.X</button>
+            <button class="boton-descarga">Descargar VX.X</button>
         </section>
     </footer>
 </body>
