últimos cambios en formato desktop: remplazo de textos por textos de diseño, arreglo de imagen de footer y reestructuras

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <img src="asserts\imagenes\desktop\image-hero-left.png" alt="">
         </section>
         <section class="textoHeader">
-            <h1>Aplicación de comunicación</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nemo delectus tempora autem minus, mollitia sapiente quis cupiditate iusto libero iure veritatis, tenetur eligendi numquam consectetur est. Eaque, nemo consectetur!</p>
+            <h1>Group Chat for Everyone</h1>
+            <p class="parrafo">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
             <div class="botonesHeader">
-                <button>Descargar VX.X</button>
-                <button>Qué es estooo??</button>
+                <button class="boton-Cadet">Download V1.3</button>
+                <button class="boton-morado">What is it?</button>
             </div>
         </section>
         <section  class="imagenHeader-right">
@@ -34,16 +34,16 @@
             <img class="imagenMain" src="asserts\imagenes\desktop\image-man-texting.jpg" alt="">
         </section>
         <section class="text">
-            <h3>Título sección</h3>
-            <H2>Titular</H2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi illo aliquam nisi enim repellendus molestias laboriosam consequuntur eaque ullam blanditiis animi, et quae. Quaerat aperiam voluptatem fugiat, veritatis corporis necessitatibus?</p>
+            <h3>BUILT FOR MODERN USE</h3>
+            <H2>Smarter meetings, all in one place</H2>
+            <p class="parrafo">Send messages. share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
         </section>
     </main>
     <footer>
-        <h2 class="sectionFooter">Título de footer</h2>
-        <p class="sectionFooter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ratione sequi minima nam culpa dolores itaque, tempora mollitia consectetur hic! Alias, eveniet eius ipsam officia ipsum error possimus neque eaque.</p>
+        <h2 class="tituloFooter">Experience more together</h2>
+        <p class="parrafoFooter">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
         <section class="buttonFooter">
-            <button class="boton-descarga">Descargar VX.X</button>
+            <button class="boton-morado">Download V1.3</button>
         </section>
     </footer>
 </body>
